# trivia_game

./: Cargo.toml  README.md
src/: main.rs
src/quiz_game/: mod.rs  quiz_game.rs
src/quiz_game/local_trivia/: debug.txt
