[package]
name = "trivia_game"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
sha2 = "0.10.8"
adler32 = "1.2.0"
open = "5.3.0"
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.5.0"
